force-app/main/default/objects/Municipios__c/Municipios__c.object-meta.xml
<CustomObject>
    <label>Municipios</label>
    <nameField>
        <label>Municipios Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Municipios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>