force-app/main/default/objects/Municipios__c/fields/DESC_MUNICIPIO__c.field-meta.xml
<CustomField>
    <fullName>DESC_MUNICIPIO__c</fullName>
    <label>DESC_MUNICIPIO</label>
    <length>80</length>
    <type>Text</type>
</CustomField>