force-app/main/default/objects/Municipios__c/fields/FECHA_INICIAL__c.field-meta.xml
<CustomField>
    <fullName>FECHA_INICIAL__c</fullName>
    <label>FECHA_INICIAL</label>
    <type>Date</type>
</CustomField>