force-app/main/default/objects/Municipios__c/fields/ID_DEPARTAMENTO__c.field-meta.xml
<CustomField>
    <fullName>ID_DEPARTAMENTO__c</fullName>
    <label>ID_DEPARTAMENTO</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>