force-app/main/default/objects/Municipios__c/fields/ID_MUNICIPIO__c.field-meta.xml
<CustomField>
    <fullName>ID_MUNICIPIO__c</fullName>
    <label>ID_MUNICIPIO</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>