force-app/main/default/objects/Municipios__c/fields/Nom_Departamento__c.field-meta.xml
<CustomField>
    <fullName>Nom_Departamento__c</fullName>
    <label>Nom Departamento</label>
    <length>100</length>
    <type>Text</type>
</CustomField>